--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -905,6 +905,7 @@
 	"stash.upload.option.links": "Links",
 	"stash.upload.option.q-and-a": "Q&A",
 	"stash.upload.page-subtitle": "You can directly upload your files, links, resources or folder",
+	"stash.upload.sync.setup": "Or set up a Sync Agent to use the Sychronization feature and automatically push data from:",
 	"stash.upload_data": "Upload data",
 	"stash.upload_to_search": "Upload data to start using the AI-search engine.",
 	"stash.users.new_user": "Add new user",
