--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -904,6 +904,7 @@
 	"stash.upload.option.links": "Enlaces",
 	"stash.upload.option.q-and-a": "Preguntas y respuestas",
 	"stash.upload.page-subtitle": "Puede cargar directamente sus archivos, enlaces, recursos o carpetas",
+	"stash.upload.sync.setup": "O configure un Agente de sincronización para usar la función de sincronización y enviar datos automáticamente desde:",
 	"stash.upload_data": "Subir datos",
 	"stash.upload_to_search": "Sube datos para empezar a utilizar el motor de búsqueda.",
 	"stash.users.new_user": "Añadir nuevo usuario",
